# uenv

./: .clang-format  .clang-format-ignore  .clangd  .editorconfig  .gitignore  404.html  CLAUDE.md  LICENSE  VERSION  activate  activate.sh  changelog.md  configuration.toml  env-var.py  generate-completion.sh  index.html  install  install-alps-local.sh  meson.build  meson_options.txt  mkdocs.yml  notes.md  oras.md  readme.md  todo  todo-meta.md  todo.md  uenv-image  uenv-impl  uenv-wrapper
.github/workflows/: artifacts.yml  build_and_test.yml  clang_format.yml  test-cli.yml
ci/: tests.bats
completion/: bash.sh  meson.build
docs/: implementation.md  index.md
implementation/: index.html
lib/: alps.py  datastore.py  env.py  envvars.py  jfrog.py  names.py  oras.py  progress.py  record.py  terminal.py
meson-scripts/: get-slurm.sh  install-bash-completion.sh  make-setuid.sh
packaging/: .gitignore  build.sh  create-rpms.sh  deployment-alps.md  make-rpm.sh  package.sh  readme.md  rpmbuild-wrapper.sh  suse-build.sh  uenv.spec  upload.sh
packaging/dockerfiles/: sles15.6
packaging/macros/: macros.meson
packaging/sles15sp5/: make-rpm.sh
packaging/sles15sp5/docker/: Dockerfile  macros.meson
rpm/: generate-rpm.sh  macros.meson  make-rpm.sh  readme.md  slurm-uenv-mount.spec  uenv.spec
search/: search_index.json
src/: start.cpp  start.h  uenv.cpp  uenv.h
src/cli/: add_remove.cpp  add_remove.h  build.cpp  build.h  color.cpp  color.h  completion.bash  completion.cpp  completion.h  config.cpp  config.h  copy.cpp  copy.h  delete.cpp  delete.h  env.cpp  env.h  find.cpp  find.h  help.cpp  help.h  image.cpp  image.h  inspect.cpp  inspect.h  ls.cpp  ls.h  print.cpp  print.h  pull.cpp  pull.h  push.cpp  push.h  repo.cpp  repo.h  run.cpp  run.h  start.cpp  start.h  status.cpp  (+6 more)
src/site/: site.cpp  site.h
src/slurm/: config.hpp.in  elastic.cpp  elastic.h  meson.build  mount.cpp  mount_slurm.cpp  mount_slurm.h  plugin.cpp
src/slurm/lib/: database.cpp  database.hpp  expected.hpp  filesystem.cpp  filesystem.hpp  mount.cpp  mount.hpp  parse_args.cpp  parse_args.hpp  sqlite.cpp  strings.cpp  strings.hpp
src/slurm/slurm/: meson.build
src/squashfs-mount/: mutable-root.cpp  rootless.cpp  rootless.h  squashfs-mount-rootless.cpp  squashfs-mount.cpp
src/uenv/: config.h.in  cscs.cpp  cscs.h  datastore.cpp  datastore.h  elastic.cpp  elastic.h  env.cpp  env.h  envvars.cpp  envvars.h  lex.cpp  lex.h  log.cpp  log.h  meson.build  meta.cpp  meta.h  modular_env.cpp  modular_env.hpp  mount.cpp  mount.h  oras.cpp  oras.h  parse.cpp  parse.h  print.cpp  print.h  registry.cpp  registry.h  repository.cpp  repository.h  settings.cpp  settings.h  sqlite.cpp  sqlite.h  uenv.cpp  uenv.h  view.h
src/uenv/fmt/: envvars.fmt  readme.md
src/util/: color.cpp  color.h  completion.cpp  completion.h  curl.cpp  curl.h  defer.h  environment.cpp  environment.h  envvars.cpp  envvars.h  expected.h  fs.cpp  fs.h  lex.cpp  lex.h  lustre.cpp  lustre.h  semver.cpp  semver.h  shell.cpp  shell.h  sigint.h  signal.cpp  signal.h  strings.cpp  strings.h  subprocess.cpp  subprocess.h
subprojects/: range-v3.wrap  tomlplusplus.wrap
test/: .gitignore  commands.sh  create_v1_db.py  meson.build  run_unit.py  setup  test  tests.bats
test/data/config-files/: all  invalid-key  invalid-line1  set-color-false  set-color-true  set-repo  set-repo-envvar
test/data/env-files/: app.json  cp2k-2024.2-v1.json  readme.md
test/input/activate/: readme.md
test/input/activate/v0.4/: arbor-v0.9-arbor.sh  arbor-v0.9-develop.sh  icon-wcp-v1_v2-default.sh  prgenv-gnu-24.2_v2-default.sh
test/input/versioned_db/: readme.md
test/input/versioned_db/v1/: index.db
test/inputs/: .gitignore  generate-repo.sh  generate-uenv.sh
test/inputs/app-uenv/meta/: env.json
test/inputs/tool-uenv/meta/: env.json
test/integration/: .gitignore  cli.bats  common.bash  install-bats  install-setup_suite.sh  readme.md  setup_suite.bash  setup_suite.bash.in  slurm.bats  squashfs-mount.bats  test.bats
test/scratch/repo/: index.db
test/setup/: .gitignore  setup  setup_repos.bash
test/setup/apptool/: schema.sql.template
test/setup/apptool/app42/meta/: env.json
test/setup/apptool/app42/modules/app/: 42.0
test/setup/apptool/app43/modules/app/: 43.0
test/setup/apptool/tool/meta/: env.json
test/setup/apptool/tool/meta/extra/: readme.txt
test/setup/apptool/tool/modules/tool/: 17.3.2
test/unit/: datastore.cpp  dates.cpp  env.cpp  envvars.cpp  fs.cpp  inputs.py  lex.cpp  main.cpp  mount.cpp  parse.cpp  readme.md  repository.cpp  scratch.py  settings.cpp  shell.cpp  signal.cpp  strings.cpp  subprocess.cpp  test_datastore.py  test_env.py  test_names.py
